# verge

./: .gitignore  Cargo.toml  components.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/: App.tsx  index.html  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/cmds/: dto.rs  mod.rs
src-tauri/src/core/: core.rs
src-tauri/src/entities/: common.rs  map_wrapper.rs  mod.rs  outbound.rs  profile.rs  proxy.rs  transform.rs
src-tauri/src/entities/models/: profiles.rs
src-tauri/src/entities/singbox/: common.rs  config.rs  dns.rs  dns_rule.rs  experiment.rs  inbound.rs  mod.rs  ntp.rs  route.rs  rule.rs  rule_set.rs  share.rs
src-tauri/src/services/: core.rs  menu.rs  mod.rs  profiles.rs  storage.rs  tray.rs
src-tauri/src/transform/: fc_common.rs  fc_outbound.rs  fc_utils.rs  from_clash.rs  map_wrapper.rs  mod.rs
src-tauri/src/utils/: dirs.rs  download.rs  mod.rs  process.rs  setup.rs  uuid.rs  window.rs
src-tauri/tests/: config1.yaml  config2.yaml
src/components/base/: base-error-boundary.tsx
src/components/ui/: button.tsx
src/pages/: layout.tsx
src/services/: model.ts
tooling/sb-parser/: .gitignore  Cargo.toml
tooling/sb-parser/scripts/: generater.py
tooling/sb-parser/src/: main.rs
