[package]
name = "verge"
version = "0.0.0"
description = "A Tauri App"
authors = ["zzzgydi"]
license = "GPL-3.0"
repository = "https://github.com/zzzgydi/verge.git"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
log = "0.4"
anyhow = "1.0"
dirs-next = "2.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tauri = { version = "2.0.0-alpha", features = ["tray-icon", "icon-png"] }
tauri-plugin-log = "2.0.0-alpha"
tauri-plugin-window = "2.0.0-alpha"
tauri-plugin-single-instance = "2.0.0-alpha"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
