[package]
name = "verge"
version = "0.0.0"
description = "A Tauri App"
authors = ["zzzgydi"]
license = "GPL-3.0"
repository = "https://github.com/zzzgydi/verge.git"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
log = "0.4"
sled = "0.34"
anyhow = "1.0"
chrono = "0.4"
nanoid = "0.4"
os_pipe = "1.1"
dirs-next = "2.0"
once_cell = "1.19"
serde_json = "1.0"
serde_yaml = "0.9"
parking_lot = "0.12"
shared_child = "1.0"
percent-encoding = "2.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tauri = { version = "2.0.0-alpha", features = ["tray-icon", "icon-png"] }
tauri-plugin-log = "2.0.0-alpha"
tauri-plugin-window = "2.0.0-alpha"
tauri-plugin-single-instance = "2.0.0-alpha"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
